# sd

./: .gitignore  CMakeLists.txt  README.md  sd.sln
app/: CMakeLists.txt  sd.cc
framework/: argtype.h  base_work_item.h  callback.h  containers.h  delayed_work_item.h  empty_work_item.h  framework.h  framework.vcxproj  framework.vcxproj.filters  framework_api.h  has_type_member.h  is_worker_notification.h  item_status.h  meta.h  no_op.h  noncopyable.h  notifications.h  observer.cc  observer.h  pool_worker.cc  pool_worker.h  program_support.cc  program_support.h  resources.h  shutdown_worker.cc  shutdown_worker.h  subject.cc  subject.h  timer.h  utility.h  work_completed.h  work_items.h  work_queue.cc  work_queue.h  work_started.h  worker.cc  worker.h  worker_notification.h  worker_pool.cc  worker_pool.h  (+1 more)
gameplay/: controller.h  drawable_object.h  gameplay.vcxproj  gameplay.vcxproj.filters  model.h
geometry/: geo_data.cc  geo_data.h  geometry.vcxproj  geometry.vcxproj.filters  geometry_data.h  line.cc  line.h  line_strip.h
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: CMakeLists.txt  glad.c
graphics/: buffer.cc  buffer.h  drawable_object.h  fragment-shader.glsl  graphics.vcxproj  graphics.vcxproj.filters  graphics_api.h  main.cc  main.cpp  shader.cc  shader.h  utility.h  vertex-shader.glsl  vertex_array_object.cc  vertex_array_object.h
include/sd/framework/: types.h
include/sd/framework/geometry/: mesh.h  point.h
include/sd/framework/graphics/: array_buffer.h  buffer_segment.h  shaders.h
include/sd/framework/input/: input_hub.h  key.h  key_state.h  key_state_type.h  key_tracker.h  mouse_action_t.h  mouse_button_change_event.h  mouse_button_state.h  mouse_button_state_t.h  mouse_button_t.h  mouse_click.h  mouse_tracker.h
include/sd/framework/interfaces/: IAction.h  IComponent.h  IDrawable.h  IGameClock.h  IShapeData.h  key_change_callback.h  mouse_button_change_event_handler.h
include/sd/framework/logging/: channel.h  log_level_t.h  logger.h
include/sd/framework/scene/: node.h
include/sd/framework/time/: clock.h  suspension.h
include/sd/gameplay/: points.h  world.h
include/sd/gameplay/time/: game_clock.h  game_clock_timer.h  timer.h  timer_status_t.h
input/: input.vcxproj  input.vcxproj.filters  mouse.cc  mouse.h
primative_shapes/: line.h  line_strip.h  primative_shapes.vcxproj  primative_shapes.vcxproj.filters  shape.h
property_sheets/: framework.props  geometry.props  glad.props  glfw.props  glm.props  graphics.props  gtest.props  input.props  opengl.props  primative_shapes.props  property_sheets.vcxproj  property_sheets.vcxproj.filters  sd.props  stb.props
scratch-pad/: main.cc  scratch-pad.vcxproj  scratch-pad.vcxproj.filters  shader.glsl
src/: CMakeLists.txt  clock.cc  game_clock.cc  game_clock_timer.cc  key.cc  key_state.cc  key_tracker.cc  logger.cc  mouse_button_state.cc  mouse_tracker.cc  point.cc  points.cc  shaders.cc  timer.cc  world.cc
src/scene/: node.cc
tools/scripts/: build.bat  clean.bat  generate-build-files.bat  setvars.bat  vcvars.bat
unit_tests/framework_unit_tests/: framework_unit_tests.vcxproj  main.cc
unit_tests/input_unit_tests/: input_unit_tests.vcxproj  main.cc
